--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -22,10 +22,10 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let item of shoppingListRef$ | async" (click)="selectItem(item)">
+    <button ion-item *ngFor="let item of shoppingListRef$ | async" (click)="selectItem(item)">
       <h2>Item name: {{ item.itemName }}</h2>
       <h3>Amount: {{ item.itemNumber }}</h3>
-
-    </ion-item>
+      <ion-icon name="arrow-forward" item-end></ion-icon>
+    </button>
   </ion-list>
 </ion-content>
